--- a/InventoryManagement/pom.xml
+++ b/InventoryManagement/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>InventoryManagement</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>InventoryManagement</name>
-    <description>HKIT project for SmartPOS-Inventory</description>
+    <description>HK IT project for SmartPOS-Inventory</description>
     <url/>
     <licenses>
         <license/>
@@ -66,6 +66,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.9</version>
         </dependency>
 
     </dependencies>
